--- a/components/service/pom.xml
+++ b/components/service/pom.xml
@@ -3,11 +3,24 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>ugateway-component</artifactId>
+        <artifactId>components</artifactId>
         <groupId>com.jxx.study</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>ugatewate-service</artifactId>
     <packaging>jar</packaging>
+
+
+    <build>
+        <finalName>ugateway</finalName>
+    </build>
+    <dependencies>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-codec-http</artifactId>
+            <version>4.1.7.Final</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 </project>
