--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <dependency>
             <groupId>com.jxx.study</groupId>
             <artifactId>ucommons</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
