--- a/pom.xml
+++ b/pom.xml
@@ -3,12 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-        <parent>
-            <groupId>com.jxx.study</groupId>
-            <artifactId>ubasepom</artifactId>
-            <relativePath>../ubasepom/pom.xml</relativePath>
-            <version>1.0-SNAPSHOT</version>
-        </parent>
+    <parent>
+        <groupId>com.jxx.study</groupId>
+        <artifactId>ubasepom</artifactId>
+        <relativePath>../ubasepom/pom.xml</relativePath>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <groupId>com.jxx.study</groupId>
     <artifactId>uagteway</artifactId>
     <version>1.0-SNAPSHOT</version>
@@ -22,5 +22,23 @@
             <artifactId>ucommons</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>org.jibx</groupId>
+            <artifactId>jibx-bind</artifactId>
+            <version>1.2.6</version>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.11</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.apache.bcel/bcel -->
+        <dependency>
+            <groupId>org.apache.bcel</groupId>
+            <artifactId>bcel</artifactId>
+            <version>5.2</version>
+        </dependency>
+
     </dependencies>
 </project>
